--- a/frontend/src/styles/AppHeader.module.css
+++ b/frontend/src/styles/AppHeader.module.css
@@ -1,10 +1,13 @@
 .header {
   background-color: #007bff;
   color: white;
-  padding: 2rem 1rem;
+  padding: 1rem 1rem;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .title {
@@ -20,6 +23,31 @@
   display: inline-block;
   animation: slideN 4s ease-in-out infinite;
   position: relative;
+}
+
+.imageWrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.imageImage {
+  width: 55px;
+  height: 55px;
+  animation: pulse 1.5s infinite ease-in-out;
+  margin-bottom: 1rem;
+}
+
+@keyframes pulse {
+  0%,
+  100% {
+    transform: scale(1);
+    opacity: 0.9;
+  }
+  50% {
+    transform: scale(1.1);
+    opacity: 1;
+  }
 }
 
 @keyframes waveLetters {
