edit skeleton size

--- a/frontend/src/styles/MemeSkeleton.module.css
+++ b/frontend/src/styles/MemeSkeleton.module.css
@@ -8,7 +8,7 @@
   justify-content: space-between;
   animation: pulse 1.5s infinite;
   width: 100%;
-  max-width: 250px;
+  height: 450px;
 }
 
 .image {
